compiler/testData/diagnostics/tests/annotations/noNameProperty.kt
// FIR_IDENTICAL
annotation class Ann(konst x: Int, konst<!SYNTAX!><!> )